--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,27 +23,27 @@
     </script>
 </head>
 <body>
-<img class=" blurred-supermegahero" src="http://cdn.eyeem.com/thumb/h/800/bce02b5cec78a8fd45772530775ecc5fe610524a-1379255277" alt="" />
-<main class="wrapper">
-  <img src="http://cdn.eyeem.com/thumb/h/800/bce02b5cec78a8fd45772530775ecc5fe610524a-1379255277" alt="Architecture" class ="super-hero-image"/>
-<header class="site-header" role="header">
-  <div class="info__box">
-    <a href="/">
-      <img src="http://kevingimbel.com/assets/img/kevin_august_13.jpeg" alt="Kevin Gimbel - Face" class="info__box--avatar" />
-    </a>
-    <div class="phrase">
-    <h1 class="ohai">Kevin Gimbel</h1>
-          <span>I'm a self-taught Front-End Developer with a passion for UI/UX, Technology and Photography.</span>
-    </div>
-  </div>
-  <nav class="site-navigation" role="navigation">
+<section class="wrapper">
+<aside class="sidebar">
+    <img src="http://distilleryimage4.ak.instagram.com/c146f96e327d11e38c4722000a9f1966_7.jpg" alt="Kevin Gimbel" />
+    <h1>Kevin Gimbel</h1>
+    <p>Self-taught <b>Front-End Developer</b> with a passion for UI/X, Technology and Photography.</p>
+<nav class="site-navigation" role="navigation">
     <a href="/" class="nav-item">Home</a>
     <a href="/about" class="nav-item">About</a>
     <a href="/cv" class="nav-item">CV</a>
-    <a href="/jekyll-guide" class="nav-item i-info" title="A guide on getting started with Jekyll">Jekyll Guide</a>
-    <a href="http://codepen.io/kevingimbel" class="nav-item">CodePen</a>
-    <a href="http://github.com/kevingimbel" class="nav-item">Github</a>
+    <a href="/archive" class="nav-item">Archive</a>
   </nav>
-</header>
+
+<div class="social">
+     <a href="http://codepen.io/kevingimbel" class="elsewhere" title="CodePen"><span class="entypo-code"></span></a>
+     <a href="http://github.com/kevingimbel" class="elsewhere" title="Github"><span class="entypo-github"></span></a>
+     <a href="http://twitter.com/_kevinatari" class="elsewhere" title="Twitter"><span class="entypo-twitter"></span></a>
+     <a href="https://plus.google.com/u/0/110655622571669158152/posts" class="elsewhere" title="Google+"><span class="entypo-gplus"></span></a>
+     <a href="http://instagram.com/_kevinatari" class="elsewhere" title="Instagram"><span class="entypo-instagrem"></span></a>
+     <a href="http://atarijunge.de" class="elsewhere" title="tumblr"><span class="entypo-tumblr"></span></a>
+     <a href="http://www.lastfm.de/user/kevinatari" class="elsewhere" title="Last.fm"><span class="entypo-lastfm"></span></a> 
+</div>
+  </aside> <!-- sidebar -->
   
-  <section class="main-content {% if page.customclass %} {{page.customclass}} {% endif %}">
+  <section class="content {% if page.customclass %} {{page.customclass}} {% endif %}">
