--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include header.html %}
-<section class="single__page">
-            <h2>{{page.title}}</h2>
+<section class="single__article">
+            <h2 class="single__article--headline">{{page.title}}</h2>
             {{ content }}
 </section>
 {% include footer.html %}
