--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,15 +1,9 @@
 {% include header.html %}
-<section class="single__page">
 <h2>Archives</h2>
 
  {% for post in site.posts %}
- 		<article class="single__article--archive">
-                <h3><a href="{{post.url}}">{{ post.title }}</a></h3>
-                {% if post.category %} 
-                    <span class="article__category">{{ post.category }}</span>
-                {% endif %}
-
+ 		<article class="single__article">
+                <a href="{{post.url}}"><h2 class="single__article--headline">{{ post.title }}</h2></a>
         </article>
         {% endfor %}
-</section>
 {% include footer.html %}
