--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% if page.title %} {{ page.title }} | {% endif %} Kevin Gimbel &ndash; Web-Development, Design and Music</title>
-    <meta name="description" content="">
+    <title>{% if page.title %} {{ page.title }} | {% endif %} &ndash; Kevin Gimbel &ndash; Web-Development, CSS, Sass, UI, UX, Thoughts, Hacks</title>
+    <meta name="description" content="Front-End Developer from Frankfurt, Germany. I write about CSS, HTML, JS and UI/X.">
+    <meta name="keywords" content="front-end,web,dev,development,frankfurt,germany,blog,writing,ui,ux,beginner,sass,scss,html,css,javascript">
     <meta name="viewport" content="width=device-width">
-	<meta dns-prefetch="http://fonts.google.com" />
-
-	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="/assets/js/jquery.js"></script>
-	<script type="text/javascript" src="/assets/js/pentizr.js"></script>
+	  <meta dns-prefetch="http://fonts.google.com" />
+    
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
