--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,4 @@
 @import "compass";
-@import "_includes/mixins"; /* own mixins */
 @import "_includes/syntax"; /* syntax highlighting */
 @import "_includes/helper.GRID"; /* Grid Helper */
 @import url(http://weloveiconfonts.com/api/?family=entypo);
@@ -12,7 +11,7 @@ $baseFont:'Ubuntu', sans-serif;
  */
 $emw--color-alpha: #40a0be;
 $emw--color-beta: #d5d5d5;
-$emw--color-gamma: #dddddd;
+$emw--color-gamma: #f1f2f4;
 $emw--color-delta: #222222;
 $emw--color-epsilon: 0;
 
@@ -59,14 +58,24 @@ a {
 
 .wrapper {
   width:100%;
-  max-width:60em;
+  max-width:70em;
   margin:$emw--unit-delta auto;
   @extend %grid--father;
 }
 
+.page--cv {
+
+    h3 {
+      padding: $emw--unit-beta !important;
+      border-bottom: 1px solid lighten($emw--color-delta,40%);
+      border-top: 1px solid lighten($emw--color-delta,40%);
+      margin-top:$emw--unit-beta;
+    }
+}
+
 .sidebar {
   width:100%;
-  max-width:16em;
+  max-width:17em;
   background:$emw--color-gamma;
   h1 {
     padding:$emw--unit-beta 0 0 $emw--unit-alpha;
@@ -76,6 +85,7 @@ a {
     padding:$emw--unit-beta;
   }
   img {width:100%;}
+
   @extend %grid--son;
 }
 
@@ -114,7 +124,7 @@ nav {
 
 .content {
   width:100%;
-  max-width:39em;
+  max-width:50em;
   margin-left:2em;
   line-height:1.65em;
   
@@ -175,7 +185,9 @@ table {
     color:#fff;
   }
 
-
+.love {
+  color:#D83A31;
+}
 
 @media all and (max-width:60em) {
 body {
@@ -196,6 +208,7 @@ body {
   max-width:100%;
   background:$emw--color-gamma;
   display:block;
+  margin-bottom: 1.5em;
   h1 {
     padding:$emw--unit-beta $emw--unit-beta 0 $emw--unit-alpha;
     font:2.5rem/2rem $baseFont;
@@ -204,6 +217,11 @@ body {
     padding:$emw--unit-beta;
   }
   img {display:none;}
+}
+
+
+.social {
+  display: none;
 }
 
 nav {
