fixed the look of the page title -.- ...

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% if page.title %} {{ page.title }} | {% endif %} &ndash; Kevin Gimbel &ndash; Web-Development, CSS, Sass, UI, UX, Thoughts, Hacks</title>
+    <title>{% if page.title %} {{ page.title }} &ndash; {% endif %} Kevin Gimbel &ndash; Web-Development, CSS, Sass, UI, UX, Thoughts, Hacks</title>
     <meta name="description" content="Front-End Developer from Frankfurt, Germany. I write about CSS, HTML, JS and UI/X.">
     <meta name="keywords" content="front-end,web,dev,development,frankfurt,germany,blog,writing,ui,ux,beginner,sass,scss,html,css,javascript">
     <meta name="viewport" content="width=device-width">
