added Google Authorship

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
      <a href="http://codepen.io/kevingimbel" class="elsewhere" title="CodePen"><span class="entypo-code"></span></a>
      <a href="http://github.com/kevingimbel" class="elsewhere" title="Github"><span class="entypo-github"></span></a>
      <a href="http://twitter.com/_kevinatari" class="elsewhere" title="Twitter"><span class="entypo-twitter"></span></a>
-     <a href="https://plus.google.com/u/0/110655622571669158152/posts" class="elsewhere" title="Google+"><span class="entypo-gplus"></span></a>
+     <a href="https://plus.google.com/110655622571669158152?rel=author" class="elsewhere" title="Google+"><span class="entypo-gplus"></span></a>
      <a href="http://instagram.com/_kevinatari" class="elsewhere" title="Instagram"><span class="entypo-instagrem"></span></a>
      <a href="http://atarijunge.de" class="elsewhere" title="tumblr"><span class="entypo-tumblr"></span></a>
      <a href="http://www.lastfm.de/user/kevinatari" class="elsewhere" title="Last.fm"><span class="entypo-lastfm"></span></a> 
