--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
     
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <script type="text/javascript" src="/assets/js/main.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -18,12 +19,11 @@
 
       ga('create', 'UA-44634206-1', 'kevingimbel.com');
       ga('send', 'pageview');
-
     </script>
 </head>
 <body>
 <section class="wrapper">
-<aside class="sidebar">
+<aside class="sidebar" id="js--sidebar">
     <img src="http://distilleryimage4.ak.instagram.com/c146f96e327d11e38c4722000a9f1966_7.jpg" alt="Kevin Gimbel" />
     <h1>Kevin Gimbel</h1>
     <p>Self-taught <b>Front-End Developer</b> with a passion for UI/X, Technology and Photography.</p>
