improvments; added Twitter Cards and Google Authorship

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,10 +9,9 @@
         </section>
 	<footer class="single__article--footer">
        <div class="single__article--footer-item">
-         <time>{{page.time}}</time>
+         <p>Written by <a href="http://google.com/+KevinGimbel">Kevin Gimbel</a></p>
        </div>
-       <div class="single__article--footer-item">
-         <div class="category">
+         <div class="single__article--footer-item">
              {% if page.category %} 
                 <span class="article__category">{{ page.category }}</span>
             {% endif %}
