--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,22 @@
     <meta name="viewport" content="width=device-width">
 	  <meta dns-prefetch="http://fonts.google.com" />
     
+    {% if page.title %}
+    <meta name="twitter:card" conntent="summary">
+    <meta name="twitter:site" conntent="@_kevinatari">
+    <meta name="twitter:domain" conntent="http://kevingimbel.com">
+    <meta name="twitter:title" conntent="{{ page.title }}">
+    <meta name="twitter:description" conntent="{{ page.excerpt | replace: '<p>', '' | replace: '</p>','' | limit: 200 }}">
+    <!-- 
+    I used this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10 
+    -->
+    {% endif %}
+
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    
     <script type="text/javascript" src="/assets/js/main.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -24,7 +38,7 @@
 <body>
 <section class="wrapper">
 <aside class="sidebar" id="js--sidebar">
-    <img src="http://distilleryimage4.ak.instagram.com/c146f96e327d11e38c4722000a9f1966_7.jpg" alt="Kevin Gimbel" />
+    <img src="/assets/img/funnyhair_2013.jpg" alt="Kevin Gimbel (with funny, curly hair)" />
     <h1>Kevin Gimbel</h1>
     <p>Self-taught <b>Front-End Developer</b> with a passion for UI/X, Technology and Photography.</p>
 <nav class="site-navigation" role="navigation">
