trying to get twitter cards working

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width">
 	  <meta dns-prefetch="http://fonts.google.com" />
     
-    {% if page.title %}
-    <meta name="twitter:card" conntent="summary">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" conntent="@_kevinatari">
     <meta name="twitter:domain" conntent="http://kevingimbel.com">
     <meta name="twitter:title" conntent="{{ page.title }}">
@@ -17,7 +16,6 @@
     <!-- 
     I used this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10 
     -->
-    {% endif %}
 
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
