--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <meta name="twitter:site" conntent="@_kevinatari">
     <meta name="twitter:domain" conntent="http://kevingimbel.com">
     <meta name="twitter:title" conntent="{{ page.title }}">
-    <meta name="twitter:description" conntent="{{ page.excerpt | replace: '<p>', '' | replace: '</p>','' | limit: 200 }}">
+    <meta name="twitter:description" conntent="{{ page.excerpt | replace: '<p>', '' | replace: '</p>','' | limit: 200 }} .">
     <!-- 
     I used this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10 
     -->
