--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" conntent="@_kevinatari">
     <meta name="twitter:domain" conntent="http://kevingimbel.com">
-    <meta name="twitter:title" conntent="{{ page.title }}">
-    <meta name="twitter:description" conntent="{{ page.excerpt | replace: '<p>', '' | replace: '</p>','' | limit: 200 }} .">
+    <meta name="twitter:title" conntent="{% if page.title %} {{ page.title }} &ndash; {% endif %} Kevin Gimbel &ndash; Web-Development, CSS, Sass, UI, UX, Thoughts, Hacks">
+    <meta name="twitter:description" conntent="{{ page.excerpt | replace: '<p>', '' | replace: '</p>','' | limit: 200 }} - Read more...">
     <!-- 
     I used this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10 
     -->
