--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <meta name="twitter:site" content="@_kevinatari">
     <meta name="twitter:domain" content="http://kevingimbel.com">
     <meta name="twitter:title" content="{% if page.title %} {{ page.title }} &ndash; {% endif %} Kevin Gimbel &ndash; Web-Development, CSS, Sass, UI, UX, Thoughts, Hacks">
-    <meta name="twitter:description" content="{{ page.excerpt | replace: '<p>', '' | replace: '</p>','' | limit: 200 }} - Read more...">
+    <meta name="twitter:description" content="{{ page.excerpt | strip_html}} (Read more...)">
     <!-- 
     I used this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10 
     -->
